--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ Authors@R: c(person("Drew", "Schmidt", role = c("aut", "cre"),
 Depends:
     R (>= 3.0.0)
 Imports:
+    methods,
     graphics,
     grid,
     gridExtra (>= 0.9.1),
