--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ import(ggplot2)
 import(graphics)
 import(grid)
 import(gridExtra)
+import(methods)
 import(reshape2)
 importFrom(stats,aggregate)
 importFrom(stats,as.formula)
