--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,11 @@
 Package: scribe
 Version: 0.1-0
 Title: Benchmarking and Plot Utilities for Hardware Counters
-Description: Scribe is a collection of tools to make benchmarking and
-    visualizing performance counter data simple, effective, and
-    reproducible.
+Description: A collection of tools to aid in benchmarking and
+    visualizing performance counter as well as MPI profiler
+    data.  The methods are intended to offer powerful, reproducible
+    visualizations with simple syntax.  Profiler data from
+    the pbdPROF and pbdPAPI packages is supported.
 Authors@R: c(person("Drew", "Schmidt", role = c("aut", "cre"),
       email = "wrathematics@gmail.com"),
     person("Wei-Chen", "Chen", role = "aut"),
@@ -17,7 +19,8 @@ Imports:
     gridExtra (>= 0.9.1),
     reshape2 (>= 1.4.1),
     ggplot2 (>= 1.0.1)
-Enhances: pbdPAPI (>= 0.2-2),
+Enhances: 
+    pbdPAPI (>= 0.2-2),
     pbdPROF (>= 0.4-0)
 ByteCompile: yes
 License: BSD 2-clause License + file LICENSE
