--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,11 +11,11 @@ Depends:
     R (>= 3.0.0)
 Imports:
     methods,
-    graphics,
     grid,
+    stats,
     gridExtra (>= 0.9.1),
     reshape2 (>= 1.4.1),
-    ggplot2 (>= 1.0.1)
+    ggplot2 (>= 2.0.0)
 Enhances: 
     pbdPAPI (>= 0.2-2),
     pbdPROF (>= 0.4-0)
