--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,35 @@
 S3method(autoplot,prof)
 S3method(plot,papi_cache)
 exportMethods(plot)
-import(ggplot2)
-import(graphics)
-import(grid)
-import(gridExtra)
 import(methods)
-import(reshape2)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,aes_string)
+importFrom(ggplot2,autoplot)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_abline)
+importFrom(ggplot2,geom_bar)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_text)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggplotGrob)
+importFrom(ggplot2,ggplot_build)
+importFrom(ggplot2,ggplot_gtable)
+importFrom(ggplot2,ggtitle)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,qplot)
+importFrom(ggplot2,scale_fill_discrete)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_bw)
+importFrom(ggplot2,unit)
+importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
+importFrom(grid,frameGrob)
+importFrom(grid,grid.layout)
+importFrom(grid,placeGrob)
+importFrom(gridExtra,arrangeGrob)
+importFrom(reshape2,melt)
 importFrom(stats,aggregate)
 importFrom(stats,as.formula)
