more namespace/import mess

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ importFrom(grid,frameGrob)
 importFrom(grid,grid.layout)
 importFrom(grid,placeGrob)
 importFrom(gridExtra,arrangeGrob)
+importFrom(gridExtra,grid.arrange)
 importFrom(reshape2,melt)
 importFrom(stats,aggregate)
 importFrom(stats,as.formula)
