--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,8 +29,11 @@ importFrom(ggplot2,unit)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(grid,frameGrob)
+importFrom(grid,gpar)
 importFrom(grid,grid.layout)
+importFrom(grid,grid.newpage)
 importFrom(grid,placeGrob)
+importFrom(grid,textGrob)
 importFrom(gridExtra,arrangeGrob)
 importFrom(gridExtra,grid.arrange)
 importFrom(reshape2,melt)
