--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ Imports:
     methods,
     grid,
     stats,
+    assertthat (>= 0.1),
     gridExtra (>= 2.0.0),
     reshape2 (>= 1.4.1),
     ggplot2 (>= 2.0.0)
