--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(plot,papi_cache)
 export(profplot)
+import(assertthat)
 import(methods)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
