--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: hpcvis
 Version: 0.2-0
 Title: Plot Utilities for MPI Codes and Hardware Counters
-Description: A collection of tools to aid in benchmarking and
+Description: A collection of tools to aid in 'benchmarking' and
     visualizing MPI codes as well as hardware performance counter
     data.  The methods are intended to offer powerful, reproducible
-    visualizations with simple syntax.  Profiler data from
-    the pbdPROF and pbdPAPI packages is supported.
+    visualizations with simple syntax.  'Profiler' data from
+    the 'pbdPROF' and 'pbdPAPI' packages is supported.
 License: BSD 2-clause License + file LICENSE
 Depends:
     R (>= 3.0.0)
